mots moins fréquents

--- a/tps/tp2/code_adapte_m3s2.ipynb
+++ b/tps/tp2/code_adapte_m3s2.ipynb
@@ -517,18 +517,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'least_common_words_common_words' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\tdeganck\\Doc en local\\Corpus\\tac\\tps\\tp2\\code_adapte_m3s2.ipynb Cell 25\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s2.ipynb#X35sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m least_common_words \u001b[39m=\u001b[39m frequencies\u001b[39m.\u001b[39mmost_common()[\u001b[39m-\u001b[39m\u001b[39m200\u001b[39m:]  \u001b[39m# Afficher les 10 mots les moins fréquents\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s2.ipynb#X35sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m# Créer un DataFrame pandas pour le tableau\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s2.ipynb#X35sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame(least_common_words_common_words, columns\u001b[39m=\u001b[39m[\u001b[39m\"\u001b[39m\u001b[39mMot\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mFréquence\u001b[39m\u001b[39m\"\u001b[39m])\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s2.ipynb#X35sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# Modifier les options d'affichage pour scroller dans Jupyter\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s2.ipynb#X35sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m pd\u001b[39m.\u001b[39mset_option(\u001b[39m'\u001b[39m\u001b[39mdisplay.max_rows\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m200\u001b[39m)  \u001b[39m# Ajuster le nombre de lignes affichées\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'least_common_words_common_words' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  Mot  Fréquence\n",
+      "0                INOI          2\n",
+      "1           BNIXELIES          2\n",
+      "2              INLMMA          2\n",
+      "3      CONNAISSANTQUI          2\n",
+      "4               PNANT          2\n",
+      "5                TTIO          2\n",
+      "6               OTIIS          2\n",
+      "7               DRUXE          2\n",
+      "8            LÉCOMBRE          2\n",
+      "9         ENTERREMENL          2\n",
+      "10               CORM          2\n",
+      "11           LSSANCES          2\n",
+      "12               IEÇU          2\n",
+      "13             FNNÈHR          2\n",
+      "14              ÏXEUE          2\n",
+      "15          TÉLÉPHONA          2\n",
+      "16               CINA          2\n",
+      "17            WAPPERS          2\n",
+      "18           NIUONANT          2\n",
+      "19            HALTERM          2\n",
+      "20               IEEK          2\n",
+      "21             RUEIIU          2\n",
+      "22            FAEICUR          2\n",
+      "23            NTEUANR          2\n",
+      "24             LIARCS          2\n",
+      "25            CPIIHLE          2\n",
+      "26            ELERCIC          2\n",
+      "27             ÎIIIIL          2\n",
+      "28       NOTAIREHONNM          2\n",
+      "29         CONTOUAIIT          2\n",
+      "30               IMMÔ          2\n",
+      "31            RENLIER          2\n",
+      "32               MÈTI          2\n",
+      "33              CENII          2\n",
+      "34         IMMCILTATE          2\n",
+      "35           VEIIIIUE          2\n",
+      "36         PRESSAIENT          2\n",
+      "37              CIIOF          2\n",
+      "38        IMPIRUDENTE          2\n",
+      "39         SURHUMAINS          2\n",
+      "40              DEGNÉ          2\n",
+      "41           DÉBORDER          2\n",
+      "42              ATENT          2\n",
+      "43           ÙVEINENT          2\n",
+      "44          CHEROHANT          2\n",
+      "45            MMANDER          2\n",
+      "46          RIGOUREUX          2\n",
+      "47          IMPÉRIEUX          2\n",
+      "48            ORCIIUE          2\n",
+      "49            CFHEVAL          2\n",
+      "50        ACCOURAIENT          2\n",
+      "51           MONTURES          2\n",
+      "52              HOCBE          2\n",
+      "53         FOPÉRÀTFON          2\n",
+      "54     IMPARFAITEMENT          2\n",
+      "55         PÉRTPÉTFES          2\n",
+      "56              HANJT          2\n",
+      "57         BEHAERBEEK          2\n",
+      "58               CEET          2\n",
+      "59            VEÀIIIJ          2\n",
+      "60               ÛAII          2\n",
+      "61             XOFIES          2\n",
+      "62            RONTIER          2\n",
+      "63            GILLOÎI          2\n",
+      "64              SIIUU          2\n",
+      "65        DISPONILTLE          2\n",
+      "66               ENTO          2\n",
+      "67          VAIKENEOR          2\n",
+      "68               URIO          2\n",
+      "69            RONTISO          2\n",
+      "70             JARDÎA          2\n",
+      "71             OITBEE          2\n",
+      "72              BOUIE          2\n",
+      "73         IRATALLATÛ          2\n",
+      "74             ITIMES          2\n",
+      "75          ENGLEBERT          2\n",
+      "76              MAHON          2\n",
+      "77             RENTIO          2\n",
+      "78       DESTOUVALLES          2\n",
+      "79             JARTHN          2\n",
+      "80             YENDQJ          2\n",
+      "81             IARDIN          2\n",
+      "82             YERNJU          2\n",
+      "83          COMINCIVE          2\n",
+      "84          CHAUTEURS          2\n",
+      "85           CHANTEUI          2\n",
+      "86            NETAUVS          2\n",
+      "87            BOCCAGE          2\n",
+      "88              USAUO          2\n",
+      "89               CÔNT          2\n",
+      "90              VCNTO          2\n",
+      "91              RETIR          2\n",
+      "92            CCNNÙEI          2\n",
+      "93             DAINON          2\n",
+      "94               ANRI          2\n",
+      "95          IMIEEUBLE          2\n",
+      "96      FTISITANDINOS          2\n",
+      "97               TIOR          2\n",
+      "98              LORNO          2\n",
+      "99           TAERBCEK          2\n",
+      "100             BÇRGÉ          2\n",
+      "101             PAUMA          2\n",
+      "102             ANDIT          2\n",
+      "103             ÔMFIO          2\n",
+      "104        CONIENANCO          2\n",
+      "105            TOTALO          2\n",
+      "106            GROOII          2\n",
+      "107           SCHAERL          2\n",
+      "108             SUSCE          2\n",
+      "109        GROENSIEEN          2\n",
+      "110          ILONNORÉ          2\n",
+      "111             APFIJ          2\n",
+      "112          IIOBIANO          2\n",
+      "113         CLAVAROAU          2\n",
+      "114             COIMR          2\n",
+      "115              ERCC          2\n",
+      "116           ARTREUX          2\n",
+      "117       SUSEEPFCIWS          2\n",
+      "118            IHUTCC          2\n",
+      "119             BERND          2\n",
+      "120              JOLL          2\n",
+      "121            FLOUÉE          2\n",
+      "122           IMLÂUVS          2\n",
+      "123         ILCOTVELD          2\n",
+      "124          COMMEICE          2\n",
+      "125          BRUXELLÔ          2\n",
+      "126           NINNTFS          2\n",
+      "127          CLIAEUNE          2\n",
+      "128              ANÇS          2\n",
+      "129              ANNU          2\n",
+      "130              ORRA          2\n",
+      "131              CUPÉ          2\n",
+      "132             CORIP          2\n",
+      "133  AVANTAGEUSEINEOL          2\n",
+      "134           SITUFCJ          2\n",
+      "135        AUGLOICRRE          2\n",
+      "136            ENFARJ          2\n",
+      "137          COLOSLLI          2\n",
+      "138           BEILLOS          2\n",
+      "139              ÏSAI          2\n",
+      "140            TLIAGE          2\n",
+      "141         BARBUSSOU          2\n",
+      "142      IFIROUDCLLOS          2\n",
+      "143          ALHAMBUA          2\n",
+      "144           MICIIEL          2\n",
+      "145          STROGOLF          2\n",
+      "146           BUDGELO          2\n",
+      "147              AVSI          2\n",
+      "148           MOLIERE          2\n",
+      "149           ALQAZAR          2\n",
+      "150          COLLANTE          2\n",
+      "151          REISROND          2\n",
+      "152              OSSÉ          2\n",
+      "153              OUPS          2\n",
+      "154            ÜIABLO          2\n",
+      "155             HÛRTO          2\n",
+      "156             GRETI          2\n",
+      "157              GLÎI          2\n",
+      "158            RFEVUO          2\n",
+      "159             PIECO          2\n",
+      "160             PLÈGE          2\n",
+      "161            JARNAR          2\n",
+      "162             SPEFI          2\n",
+      "163            VERELD          2\n",
+      "164             PLACÔ          2\n",
+      "165              OPSS          2\n",
+      "166          GONCORTS          2\n",
+      "167              ÉESV          2\n",
+      "168             RAVER          2\n",
+      "169           DÇMAMIA          2\n",
+      "170             POUÎT          2\n",
+      "171            ÉVITÂT          2\n",
+      "172             RNBAT          2\n",
+      "173            PRDSON          2\n",
+      "174             FCÔSÏ          2\n",
+      "175           RAVERGI          2\n",
+      "176          CFTILANE          2\n",
+      "177              ILLS          2\n",
+      "178  RESPEETUEUSEMENT          2\n",
+      "179         PAGNAIENT          2\n",
+      "180    VALEUREUSEMENT          2\n",
+      "181            LTÉROL          2\n",
+      "182             ETFLE          2\n",
+      "183      HEUREUSENTEN          2\n",
+      "184   RENSORGNETNENTS          2\n",
+      "185              CISL          2\n",
+      "186           GÉNÉRQL          2\n",
+      "187           SEJIÔWF          2\n",
+      "188            MAJORY          2\n",
+      "189           BRASTÉN          2\n",
+      "190              LOIQ          2\n",
+      "191              ÎLAS          2\n",
+      "192         DIVERSION          2\n",
+      "193         FAEFLITER          2\n",
+      "194             BALÈL          2\n",
+      "195            LARRET          2\n",
+      "196           ŸEÆCLAM          2\n",
+      "197           AMERTON          2\n",
+      "198      RÉFPUBLLCAIN          2\n",
+      "199             NFLFL          2\n"
      ]
     }
    ],
