--- a/tps/tp2/code_adapte_m3s2.ipynb
+++ b/tps/tp2/code_adapte_m3s2.ipynb
@@ -61,7 +61,10 @@
     "       \"gros\", \"pers\", \"aujourd\", \"toujours\", \"bonne\", \"grande\", \"chaque\", \"fois\", \"trop\", \"boulevard\", \"monsieur\", \"elles\", \n",
     "       \"louée\", \"suite\", \"soir\", \"prix\", \"vend\", \"vendre\", \"quart\", \"ouvr\", \"addresser\", \"prés\", \n",
     "       \"cert\", \"assez\", \"pris\", \"chamb\", \"chambre\", \"louer\", \"place\", \"demande\", \"midi\", \"nord\", \"fille\", \"garçon\", \n",
-    "       \"maison\", \"vente\", \"femme\", \"temps\", \"homme\", \"partie\", \"ventes\", \"serv\", \"bonnes\"]\n",
+    "       \"maison\", \"vente\", \"femme\", \"temps\", \"homme\", \"partie\", \"ventes\", \"serv\", \"bonnes\", \n",
+    "       \"matin\", \"brux\", \"jeune\", \"lieu\", \"demi\", \"beau\", \"service\", \"dame\", \"adresser\", \"hommes\", \"prop\", \"neuf\", \n",
+    "       \"neuve\", \"occas\", \"nouveau\", \"seule\", \"moment\", \"voir\", \"première\", \"journ\", \"dernier\", \"courant\",\n",
+    "       \"vieux\", \"nouvelle\", \"chaus\", \"nuit\", \"garn\", \"nommé\"]\n",
     "sw = set(sw)\n"
    ]
   },
