fonction get_sentiment PH1

--- a/tps/tp2/code_adapte_m3s4.ipynb
+++ b/tps/tp2/code_adapte_m3s4.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -344,6 +344,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Phrase 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -361,6 +368,23 @@
    ],
    "source": [
     "sentiment_analyser(\"Mais l’on n’eii finirait pas s’il fallait signaler toutes les absurdités d«u régime actuel. Ses défenseurs sont décidément bien aveugles s'ils ne les voient pas! Il est vrai que certains d’entre eux ont de singuliers principes.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 1% positive and 19% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_sentiment(\"Mais l’on n’eii finirait pas s’il fallait signaler toutes les absurdités d«u régime actuel. Ses défenseurs sont décidément bien aveugles s'ils ne les voient pas! Il est vrai que certains d’entre eux ont de singuliers principes.\")"
    ]
   },
   {
