toutes les phrases dans tableau

--- a/tps/tp2/code_adapte_m3s4.ipynb
+++ b/tps/tp2/code_adapte_m3s4.ipynb
@@ -388,8 +388,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Phrase 2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -398,13 +405,37 @@
        "[{'label': 'POSITIVE', 'score': 0.8752367496490479}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sentiment_analyser(\"Je voudrais, 'moi aussi, pouvoir crier sans cepse un vigoureux, «un énergique deleiula.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 40% positive and 50% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_sentiment(\"Je voudrais, 'moi aussi, pouvoir crier sans cepse un vigoureux, «un énergique deleiula.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Phrase 3"
    ]
   },
   {
@@ -429,22 +460,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'label': 'POSITIVE', 'score': 0.6937665939331055}]"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 50% positive and perfectly objective.\n"
+     ]
     }
    ],
    "source": [
-    "sentiment_analyser(\"Il n/est pas inultite de rappeler au public que, depuis «le l 8r novembre, les musées «royaux des arts «décoratifs et in- dusünLehs, Parc dut Gin quantienaire, sont où- vents au «public die 10 heures du matin à 3 «heures de «raprès-midi.\")"
+    "get_sentiment(\"Gomma se «leva et éclata de rire les éeoles et les musées mdiustriels.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Phrase 4"
    ]
   },
   {
@@ -469,6 +504,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 3% negative and 15% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_sentiment(\"la «poète bruxelloise vient-elle, cm trois jours, die distribuer 1,200,000 carte® et 418,000 cartes illustrées, alors que l’an dernier, «en cinq jours, di'Le n en' avait distribué en tout que 1,400,000.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Phrase 5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -485,6 +544,30 @@
    ],
    "source": [
     "sentiment_analyser(\"Il ©sfc diffioiletle faire choix iVutîe bonne marqt.o dd Champagne.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 70% positive and 70% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_sentiment(\"Il ©sfc diffioiletle faire choix iVutîe bonne marqt.o dd Champagne.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Phrase 6"
    ]
   },
   {
@@ -509,6 +592,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 24% positive and 15% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_sentiment(\"Néanmoin'S, le conseil des mines a «mis toutes les diligences nécessaires dans l’expédition des affaires qui lui étaient soumises.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Phrase 7"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [
@@ -525,6 +632,30 @@
    ],
    "source": [
     "sentiment_analyser(\"Avant de statuer, le tribunal do commerce désigna des exports, qui déclarèrent que les « Bulles de Savon » m'étaient pas do Rembrandt, ensuite de .quoi il ordonna la «résiliation de la vente au profit de M. Van IL... condamnant, en outre, M. de B... à lui payer 10 mille francs de dommages-intérêts.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 20% positive and 20% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_sentiment(\"Avant de statuer, le tribunal do commerce désigna des exports, qui déclarèrent que les « Bulles de Savon » m'étaient pas do Rembrandt, ensuite de .quoi il ordonna la «résiliation de la vente au profit de M. Van IL... condamnant, en outre, M. de B... à lui payer 10 mille francs de dommages-intérêts.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Phrase 8"
    ]
   },
   {
@@ -549,6 +680,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 4% negative and 5% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_sentiment(\"Il n’est rien de .fondé non plus dans le bruit colporté ici d’une épidémie de .peste à Pisagna : cette ville fut décimée par la poste au commencement de 1904.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Phrase 9"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [
@@ -565,6 +720,67 @@
    ],
    "source": [
     "sentiment_analyser(\"AL Vanderveldc tient à protester contre certaines allégations de M. Gielen, qui tendraient à prouver que la gauche socialiste retarde le vote de Ta loi sur les mines du Limbourg.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 4% positive and 12% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_sentiment(\"AL Vanderveldc tient à protester contre certaines allégations de M. Gielen, qui tendraient à prouver que la gauche socialiste retarde le vote de Ta loi sur les mines du Limbourg.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyser le sentiment de toutes les phrases et afficher les résultats dans un tableau"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Liste de 10 phrases\n",
+    "phrases = [\n",
+    "    \"Mais l’on n’eii finirait pas s’il fallait signaler toutes les absurdités d«u régime actuel. Ses défenseurs sont décidément bien aveugles s'ils ne les voient pas! Il est vrai que certains d’entre eux ont de singuliers principes.\",\n",
+    "    \"Je voudrais, 'moi aussi, pouvoir crier sans cepse un vigoureux, «un énergique deleiula.\",\n",
+    "    \"Gomma se «leva et éclata de rire les éeoles et les musées mdiustriels.\",\n",
+    "    \"la «poète bruxelloise vient-elle, cm trois jours, die distribuer 1,200,000 carte® et 418,000 cartes illustrées, alors que l’an dernier, «en cinq jours, di'Le n en' avait distribué en tout que 1,400,000.\",\n",
+    "    \"Il ©sfc diffioiletle faire choix iVutîe bonne marqt.o dd Champagne.\",\n",
+    "    \"Néanmoin'S, le conseil des mines a «mis toutes les diligences nécessaires dans l’expédition des affaires qui lui étaient soumises.\",\n",
+    "    \"Avant de statuer, le tribunal do commerce désigna des exports, qui déclarèrent que les « Bulles de Savon » m'étaient pas do Rembrandt, ensuite de .quoi il ordonna la «résiliation de la vente au profit de M. Van IL... condamnant, en outre, M. de B... à lui payer 10 mille francs de dommages-intérêts.\",\n",
+    "    \"Il n’est rien de .fondé non plus dans le bruit colporté ici d’une épidémie de .peste à Pisagna : cette ville fut décimée par la poste au commencement de 1904.\",\n",
+    "    \"AL Vanderveldc tient à protester contre certaines allégations de M. Gielen, qui tendraient à prouver que la gauche socialiste retarde le vote de Ta loi sur les mines du Limbourg.\"\n",
+    "]\n",
+    "\n",
+    "# Créer une liste pour stocker les résultats\n",
+    "results = []\n",
+    "\n",
+    "# Analyser chaque phrase avec la fonction get_sentiment\n",
+    "for phrase in phrases:\n",
+    "    polarity, polarity_perc, polarity_str, subjectivity, subjectivity_perc, subjectivity_str = get_sentiment(phrase)\n",
+    "    results.append([phrase, polarity, polarity_perc, polarity_str, subjectivity, subjectivity_perc, subjectivity_str])\n",
+    "\n",
+    "# Créer un DataFrame pandas pour afficher les résultats\n",
+    "df = pd.DataFrame(results, columns=[\"Phrase\", \"Polarité\", \"Pourcentage de Polarité\", \"Description Polarité\", \n",
+    "                                    \"Subjectivité\", \"Pourcentage de Subjectivité\", \"Description Subjectivité\"])\n",
+    "\n",
+    "# Afficher le tableau\n",
+    "print(df)\n"
    ]
   }
  ],
