--- a/tps/tp2/code_adapte_m3s4.ipynb
+++ b/tps/tp2/code_adapte_m3s4.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,28 +32,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "tb = Blobber(pos_tagger=PatternTagger(), analyzer=PatternAnalyzer())\n",
     "\n",
     "def get_sentiment(input_text):\n",
+    "    # Analyser le texte\n",
     "    blob = tb(input_text)\n",
     "    polarity, subjectivity = blob.sentiment\n",
+    "    \n",
+    "    # Calculer les pourcentages de polarité et de subjectivité\n",
     "    polarity_perc = f\"{100*abs(polarity):.0f}\"\n",
     "    subjectivity_perc = f\"{100*subjectivity:.0f}\"\n",
+    "    \n",
+    "    # Classer la polarité\n",
     "    if polarity > 0:\n",
     "        polarity_str = f\"{polarity_perc}% positive\"\n",
     "    elif polarity < 0:\n",
     "        polarity_str = f\"{polarity_perc}% negative\"\n",
     "    else:\n",
     "        polarity_str = \"neutral\"\n",
+    "    \n",
+    "    # Classer la subjectivité\n",
     "    if subjectivity > 0:\n",
     "        subjectivity_str = f\"{subjectivity_perc}% subjective\"\n",
     "    else:\n",
     "        subjectivity_str = \"perfectly objective\"\n",
-    "    print(f\"This text is {polarity_str} and {subjectivity_str}.\")"
+    "    \n",
+    "    # Retourner les résultats sous forme de tuple\n",
+    "    return polarity, polarity_perc, polarity_str, subjectivity, subjectivity_perc, subjectivity_str\n"
    ]
   },
   {
@@ -65,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -84,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "tags": []
    },
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -280,9 +289,7 @@
      "text": [
       "\n",
       "[notice] A new release of pip is available: 24.2 -> 24.3.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n",
-      "c:\\Users\\tdeganck\\Doc en local\\Corpus\\tac\\.corpus_env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -305,19 +312,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\tdeganck\\Doc en local\\Corpus\\tac\\.corpus_env\\Lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n",
-      "WARNING:tensorflow:From c:\\Users\\tdeganck\\Doc en local\\Corpus\\tac\\.corpus_env\\Lib\\site-packages\\tf_keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
-      "\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -352,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +358,7 @@
        "[{'label': 'NEGATIVE', 'score': 0.5601009726524353}]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +402,7 @@
        "[{'label': 'POSITIVE', 'score': 0.8752367496490479}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +446,7 @@
        "[{'label': 'POSITIVE', 'score': 0.7269352078437805}]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +490,7 @@
        "[{'label': 'POSITIVE', 'score': 0.5161919593811035}]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +534,7 @@
        "[{'label': 'POSITIVE', 'score': 0.832249641418457}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -581,7 +578,7 @@
        "[{'label': 'POSITIVE', 'score': 0.5026593208312988}]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +622,7 @@
        "[{'label': 'POSITIVE', 'score': 0.6943281292915344}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +666,7 @@
        "[{'label': 'NEGATIVE', 'score': 0.9033969640731812}]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +710,7 @@
        "[{'label': 'POSITIVE', 'score': 0.5817428827285767}]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -724,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -748,13 +745,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 1% positive and 19% subjective.\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable NoneType object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\tdeganck\\Doc en local\\Corpus\\tac\\tps\\tp2\\code_adapte_m3s4.ipynb Cell 41\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s4.ipynb#X46sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39m# Analyser chaque phrase avec la fonction get_sentiment\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s4.ipynb#X46sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39mfor\u001b[39;00m phrase \u001b[39min\u001b[39;00m phrases:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s4.ipynb#X46sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     polarity, polarity_perc, polarity_str, subjectivity, subjectivity_perc, subjectivity_str \u001b[39m=\u001b[39m get_sentiment(phrase)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s4.ipynb#X46sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m     results\u001b[39m.\u001b[39mappend([phrase, polarity, polarity_perc, polarity_str, subjectivity, subjectivity_perc, subjectivity_str])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s4.ipynb#X46sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39m# Créer un DataFrame pandas pour afficher les résultats\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Liste de 10 phrases\n",
+    "# Liste de 9 phrases\n",
     "phrases = [\n",
     "    \"Mais l’on n’eii finirait pas s’il fallait signaler toutes les absurdités d«u régime actuel. Ses défenseurs sont décidément bien aveugles s'ils ne les voient pas! Il est vrai que certains d’entre eux ont de singuliers principes.\",\n",
     "    \"Je voudrais, 'moi aussi, pouvoir crier sans cepse un vigoureux, «un énergique deleiula.\",\n",
