vérification REN boucle et GPT

--- a/module3/s2_wordcloud.ipynb
+++ b/module3/s2_wordcloud.ipynb
@@ -322,13 +322,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "BRUSSRI: 1\n",
+      "PTATTA: 1\n",
+      "BEBETS: 1\n",
+      "WYDEMANE: 1\n",
+      "BOSEHVOORD: 1\n",
+      "VAYTAAN: 1\n",
+      "GEZOGD: 1\n",
+      "TARLSSEN: 1\n",
+      "BEHETF: 1\n",
+      "WRDCMANS: 1\n",
+      "AANGS: 1\n",
+      "BRUSESL: 1\n",
+      "OPENBOAR: 1\n",
+      "HERBSRGE: 1\n",
+      "LOMAL: 1\n",
+      "PATSR: 1\n",
+      "NOSIER: 1\n",
+      "OVSRYSSCBE: 1\n",
+      "OEMEENTO: 1\n",
+      "ORONASCBE: 1\n",
+      "KAUTERSTRAAT: 1\n",
+      "WOONHUIS: 1\n",
+      "AANHOORLGHS: 1\n",
+      "KOSR: 1\n",
+      "BOÜWOROND: 1\n",
+      "ROLLEN: 1\n",
+      "ONBELAST: 1\n",
+      "OEQOT: 1\n",
+      "BTTELLNG: 1\n",
+      "PRUZSN: 1\n",
+      "ONKOSTEN: 1\n",
+      "ONMLDDRTIJK: 1\n",
+      "WOONHULS: 1\n",
+      "ZLEHTBAAR: 1\n",
+      "MAANDAGSN: 1\n",
+      "WOENDAGEN: 1\n",
+      "VRLJDAGEN: 1\n",
+      "VOORIOPLFE: 1\n",
+      "TOEWIJZLNG: 1\n",
+      "VRIJDAG: 1\n",
+      "DECEM: 1\n",
+      "ETNDEUJUE: 1\n",
+      "UXRAUZIIXG: 1\n",
+      "TVOWLMF: 1\n",
+      "JANUART: 1\n",
+      "TOLKENS: 1\n",
+      "ROARAHOAT: 1\n",
+      "GRANDEC: 1\n",
+      "BAUMSNTS: 1\n",
+      "BÂTIE: 1\n",
+      "ASQUNTES: 1\n",
+      "TTITAB: 1\n",
+      "FTAVION: 1\n",
+      "BLLQUE: 1\n",
+      "AOÉTYLÉNE: 1\n",
+      "MAAO: 1\n",
+      "PATPLANCBES: 1\n",
+      "CINTRE: 1\n",
+      "BALLAST: 1\n",
+      "BUSEIURES: 1\n",
+      "PATOONIER: 1\n",
+      "ONTIIS: 1\n",
+      "THLSIETT: 1\n",
+      "VUTTE: 1\n",
+      "PALEMSOT: 1\n",
+      "OHES: 1\n",
+      "BÉVE: 1\n",
+      "BABUATLON: 1\n",
+      "HELVETIS: 1\n",
+      "JORDAOU: 1\n",
+      "DEVNS: 1\n",
+      "CARIE: 1\n",
+      "RÉOOTIETS: 1\n",
+      "ACTUETIEMENT: 1\n",
+      "PARTIOTIEMEOT: 1\n",
+      "EMUÉ: 1\n",
+      "JORDAEN: 1\n",
+      "PTNCHART: 1\n",
+      "DEBATBY: 1\n",
+      "MARITALE: 1\n",
+      "VTTLE: 1\n",
+      "SEARNUR: 1\n",
+      "BYPOTHÈQUES: 1\n",
+      "TLUY: 1\n",
+      "LLOCKE: 1\n",
+      "COURTREL: 1\n",
+      "BMLAERC: 1\n",
+      "OUMLULON: 1\n",
+      "DECAUVLILE: 1\n",
+      "PALAN: 1\n",
+      "BOELAERE: 1\n",
+      "PATEMEN: 1\n",
+      "VLOR: 1\n",
+      "HAMBURSLN: 1\n",
+      "HOSTET: 1\n",
+      "ARDENNALSE: 1\n",
+      "ANEEREMME: 1\n",
+      "BURSLN: 1\n",
+      "TERNIEREO: 1\n",
+      "ACCOLÉE: 1\n",
+      "WOLNWÉ: 1\n",
+      "WHLLLOEK: 1\n",
+      "VAIKENEER: 1\n",
+      "STOCKAL: 1\n",
+      "HÉUCE: 1\n",
+      "MOBIUEB: 1\n",
+      "GRAVURE: 1\n",
+      "FRÉTA: 1\n",
+      "COURDET: 1\n",
+      "DOECAMPE: 1\n",
+      "DEECAMPE: 1\n",
+      "OOOFRÉRO: 1\n",
+      "LTALL: 1\n",
+      "NIVELLE: 1\n",
+      "ÎUODL: 1\n",
+      "MONSTRCUX: 1\n",
+      "BARTE: 1\n",
+      "ECTLON: 1\n",
+      "ORTCFTT: 1\n",
+      "OÔRIREJBCRIT: 1\n",
+      "VANDERMAELON: 1\n",
+      "VINAGE: 1\n",
+      "BRPS: 1\n",
+      "QUERBS: 1\n",
+      "LAMBÆRT: 1\n",
+      "HULULER: 1\n",
+      "HENROE: 1\n",
+      "THLEIEMAN: 1\n",
+      "DUCARME: 1\n",
+      "TUIEUI: 1\n",
+      "JAUV: 1\n",
+      "TAVERNO: 1\n",
+      "CEATERBURY: 1\n",
+      "COKÈGE: 1\n",
+      "TTR: 1\n",
+      "MARCLITANNE: 1\n",
+      "BORAEL: 1\n",
+      "JOIOPN: 1\n",
+      "GOESERIN: 1\n",
+      "FTMTA: 1\n",
+      "MAONIF: 1\n",
+      "OCACIERCE: 1\n",
+      "DESCRIPTION: 1\n",
+      "CFCAUNEÉE: 1\n",
+      "SARIO: 1\n",
+      "PENSLON: 1\n",
+      "MUTINE: 1\n",
+      "ADJUGÉE: 1\n",
+      "KLECIRT: 1\n",
+      "HULAELER: 1\n",
+      "NOTIFIÉE: 1\n",
+      "DÉNONCÉE: 1\n",
+      "GRIMBERGBEN: 1\n",
+      "HUYGEOS: 1\n",
+      "DÉDUIT: 1\n",
+      "SÉANE: 1\n",
+      "JWG: 1\n",
+      "MATSCEI: 1\n",
+      "ROMMUNATE: 1\n",
+      "AUDENGHEM: 1\n",
+      "AUDTVGHT: 1\n",
+      "CHEASE: 1\n",
+      "OOMMER: 1\n",
+      "OOOTEN: 1\n",
+      "TOUÉES: 1\n",
+      "NONOER: 1\n",
+      "MLCHIRT: 1\n",
+      "AMPTEN: 1\n",
+      "ÉCRIS: 1\n",
+      "DFFAY: 1\n",
+      "SCOVLKE: 1\n",
+      "FEBME: 1\n",
+      "MANTE: 1\n",
+      "LNATRUM: 1\n",
+      "DITION: 1\n",
+      "HORACE: 1\n",
+      "EHNUTEÉE: 1\n",
+      "MEUTSEN: 1\n",
+      "WLSLOE: 1\n",
+      "SALTE: 1\n",
+      "POÉTIES: 1\n",
+      "USTENSBEA: 1\n",
+      "DIRORE: 1\n",
+      "RAVIER: 1\n",
+      "PRÉCW: 1\n",
+      "EXPOALT: 1\n",
+      "GRR: 1\n",
+      "UOETE: 1\n",
+      "AOADLT: 1\n",
+      "JENDJ: 1\n",
       "ZWAAN: 1\n",
       "ATOEMBERG: 1\n",
       "VAODERVELDEO: 1\n",
@@ -344,7 +534,7 @@
    ],
    "source": [
     "# Trier les mots par fréquence croissante (les moins fréquents d'abord)\n",
-    "least_common_words = frequencies.most_common()[-10:]  # Afficher les 10 mots les moins fréquents\n",
+    "least_common_words = frequencies.most_common()[-200:]  # Afficher les 10 mots les moins fréquents\n",
     "\n",
     "# Afficher les résultats\n",
     "for word, freq in least_common_words:\n",
