--- a/tps/tp2/code_adapte_m3s4.ipynb
+++ b/tps/tp2/code_adapte_m3s4.ipynb
@@ -745,25 +745,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This text is 1% positive and 19% subjective.\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable NoneType object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\tdeganck\\Doc en local\\Corpus\\tac\\tps\\tp2\\code_adapte_m3s4.ipynb Cell 41\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s4.ipynb#X46sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m \u001b[39m# Analyser chaque phrase avec la fonction get_sentiment\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s4.ipynb#X46sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39mfor\u001b[39;00m phrase \u001b[39min\u001b[39;00m phrases:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s4.ipynb#X46sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m     polarity, polarity_perc, polarity_str, subjectivity, subjectivity_perc, subjectivity_str \u001b[39m=\u001b[39m get_sentiment(phrase)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s4.ipynb#X46sZmlsZQ%3D%3D?line=21'>22</a>\u001b[0m     results\u001b[39m.\u001b[39mappend([phrase, polarity, polarity_perc, polarity_str, subjectivity, subjectivity_perc, subjectivity_str])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tdeganck/Doc%20en%20local/Corpus/tac/tps/tp2/code_adapte_m3s4.ipynb#X46sZmlsZQ%3D%3D?line=23'>24</a>\u001b[0m \u001b[39m# Créer un DataFrame pandas pour afficher les résultats\u001b[39;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
+      "                                              Phrase  Polarité  \\\n",
+      "0  Mais l’on n’eii finirait pas s’il fallait sign...  0.012143   \n",
+      "1  Je voudrais, 'moi aussi, pouvoir crier sans ce...  0.400000   \n",
+      "2  Gomma se «leva et éclata de rire les éeoles et...  0.500000   \n",
+      "3  la «poète bruxelloise vient-elle, cm trois jou... -0.035000   \n",
+      "4  Il ©sfc diffioiletle faire choix iVutîe bonne ...  0.700000   \n",
+      "5  Néanmoin'S, le conseil des mines a «mis toutes...  0.245000   \n",
+      "6  Avant de statuer, le tribunal do commerce dési...  0.200000   \n",
+      "7  Il n’est rien de .fondé non plus dans le bruit... -0.042500   \n",
+      "8  AL Vanderveldc tient à protester contre certai...  0.043333   \n",
+      "\n",
+      "  Pourcentage de Polarité Description Polarité  Subjectivité  \\\n",
+      "0                       1          1% positive      0.192857   \n",
+      "1                      40         40% positive      0.500000   \n",
+      "2                      50         50% positive      0.000000   \n",
+      "3                       3          3% negative      0.150000   \n",
+      "4                      70         70% positive      0.700000   \n",
+      "5                      24         24% positive      0.150000   \n",
+      "6                      20         20% positive      0.200000   \n",
+      "7                       4          4% negative      0.050000   \n",
+      "8                       4          4% positive      0.116667   \n",
+      "\n",
+      "  Pourcentage de Subjectivité Description Subjectivité  \n",
+      "0                          19           19% subjective  \n",
+      "1                          50           50% subjective  \n",
+      "2                           0      perfectly objective  \n",
+      "3                          15           15% subjective  \n",
+      "4                          70           70% subjective  \n",
+      "5                          15           15% subjective  \n",
+      "6                          20           20% subjective  \n",
+      "7                           5            5% subjective  \n",
+      "8                          12           12% subjective  \n"
      ]
     }
    ],
@@ -796,7 +816,10 @@
     "                                    \"Subjectivité\", \"Pourcentage de Subjectivité\", \"Description Subjectivité\"])\n",
     "\n",
     "# Afficher le tableau\n",
-    "print(df)\n"
+    "print(df)\n",
+    "\n",
+    "# Enregistrer dans un fichier Excel\n",
+    "df.to_excel(\"sentiment_results.xlsx\", index=False)\n"
    ]
   }
  ],
