--- a/tps/tp3/code_adapte_m4s2.ipynb
+++ b/tps/tp3/code_adapte_m4s2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "True"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,11 +74,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = \"../data/txt/\""
+    "data_path = \"../../data/txt/\""
    ]
   },
   {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "0"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1564,9 @@
     "        return f.read()\n",
     "\n",
     "# Définir le répertoire de destination des deux fichiers\n",
-    "output_dir = \"../tps/tp3/\"  \n",
+    "#output_dir = \"../tps/tp3/\"  [je met ceci en commentaire car j'avais au \n",
+    "# départ adapté le code dans le dossier du module 4, si on ne spécifie pas, alors l'outpudir sera \n",
+    "# le dossier de travail en cours]\n",
     "\n",
     "# Créer les fichiers pour chaque cluster et y enregistrer les textes\n",
     "for label, files_in_cluster in clustering.items():\n",
